updated README.md and more intuitive response